Bug 971393 PresShell shouldn't discard events which won't cause DOM events even while it's not safe to dispatch DOM events r=smaug